# Gamo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in
core/: CMakeLists.txt  gamo.h  temp.sh
core/actor/: CMakeLists.txt
core/actor/include/: actor.h  behavior.h  camera.h  characteristic.h  characteristic_base.h  collider.h  renderer.h  rigidbody.h  tilemap.h  transform.h
core/actor/src/: actor.cpp  camera.cpp  characteristic.cpp  collider.cpp  renderer.cpp  rigidbody.cpp  tilemap.cpp  transform.cpp
core/actor/test/: test_characteristic.cpp  test_physics.cpp
core/algo/: CMakeLists.txt
core/algo/include/: algo.h  polygon_algo.h
core/algo/test/: test_polygon_algo.cpp
core/director/: CMakeLists.txt
core/director/src/: render_director.cpp
core/director/test/: test_render_director.cpp
core/event/: CMakeLists.txt
core/event/include/: event.h  eventtype.h
core/event/src/: dispatcher.cpp
core/event/test/: test_event_dispatcher.cpp
core/game/: CMakeLists.txt
core/game/include/: play.h  scene.h
core/game/src/: play.cpp  scene.cpp
core/game/test/: test_mem_free.cpp  test_physics_in_play.cpp  test_play.cpp
core/include/gamo/: gamo.h
core/include/gamo/actor/: actor.h  behavior.h  camera.h  characteristic_base.h  collider.h  renderer.h  rigidbody.h  tilemap.h  transform.h
core/include/gamo/algo/: polygon_algo.h
core/include/gamo/director/: render_director.h
core/include/gamo/event/: dispatcher.h  event.h
core/include/gamo/game/: game.h  play.h  scene.h
core/include/gamo/input/: input.h
core/include/gamo/physics/: contact_listener.h  physics_config.h  shape.h
core/include/gamo/render/: render.h  render_asset.h  sprite.h  texture.h
core/include/gamo/resource/: resource.h
core/include/gamo/utils/: prototype.h  singleton.h
core/input/: CMakeLists.txt
core/input/include/: input.h
core/input/src/: input.cpp
core/input/test/: test_input.cpp
core/physics/: CMakeLists.txt
core/physics/include/: physics.h  physics_asset.h  physics_config.h  shape.h
core/physics/src/: physics_asset.cpp  shape.cpp
core/physics/test/: test_shape.cpp
core/render/: CMakeLists.txt
core/render/include/: render_asset.h  sprite.h  texture.h
core/render/src/: render_asset.cpp  texture.cpp
core/resource/: CMakeLists.txt
core/resource/include/: resource.h
core/resource/test/: test_resource_base.cpp
core/src/actor/: actor.cpp  camera.cpp  characteristic.cpp  collider.cpp  renderer.cpp  rigidbody.cpp  tilemap.cpp  transform.cpp
core/src/director/: render_director.cpp
core/src/event/: dispatcher.cpp
core/src/game/: play.cpp  scene.cpp
core/src/input/: input.cpp
core/src/physics/: shape.cpp
core/src/render/: render_asset.cpp  sprite.cpp  texture.cpp
core/test/: CMakeLists.txt  test_actor.cpp  test_basic_type.cpp  test_behavior.cpp  test_characteristic.cpp  test_clone.cpp  test_event_dispatcher.cpp  test_input.cpp  test_mem_free.cpp  test_physics.cpp  test_physics_in_play.cpp  test_play.cpp  test_polygon_algo.cpp  test_prototype_template.cpp  test_render_director.cpp  test_resource_base.cpp  test_scene.cpp  test_shape.cpp  test_singleton_template.cpp  test_sprite.cpp  test_texture.cpp  test_tilemap.cpp  test_transform.cpp
core/utils/: CMakeLists.txt
core/utils/include/: singleton.h  type.h  utils.h
core/utils/test/: test_singleton_template.cpp
docs/: README.zh.md
py/gamo/core/: CMakeLists.txt  __init__.py  bind_actor.cpp  bind_input.cpp  bind_render.cpp  bind_type.cpp  gamo_core_py.cpp  gamo_core_py.h
py/gamo/core/_core/: CMakeLists.txt  bind_actor.cpp  bind_game.cpp  bind_input.cpp  bind_physics.cpp  bind_resource.cpp  bind_type.cpp  gamo_core_py.cpp  gamo_core_py.h
script/: build.sh
src/: CMakeLists.txt  main.cpp
src/actor/: CMakeLists.txt
src/actor/include/: actor.h  behavior.h  camera.h  characteristic.h  characteristic_base.h  collider.h  renderer.h  rigidbody.h  transform.h
src/actor/src/: actor.cpp  behavior.cpp  camera.cpp  characteristic.cpp  collider.cpp  renderer.cpp  rigidbody.cpp  transform.cpp
src/actor/test/: test_actor.cpp  test_behavior.cpp  test_characteristic.cpp  test_physics.cpp
src/director/: CMakeLists.txt
src/director/include/: director.h  render_director.h
src/director/src/: render_director.cpp
src/director/test/: test_render_director.cpp
src/event/include/: dispatcher.h  event.h  event_base.h  eventtype.h
src/event/src/: dispatcher.cpp
src/game/: CMakeLists.txt
src/game/include/: play.h  scene.h
src/game/src/: play.cpp  scene.cpp
src/game/test/: test_physics_in_play.cpp  test_play.cpp  test_scene.cpp
src/input/test/: test_input.cpp
src/physics/: CMakeLists.txt
src/physics/include/: physics.h  physics_asset.h  physics_types.h
src/physics/src/: physics_asset.cpp
src/render/: CMakeLists.txt
src/render/include/: render.h  sprite.h  texture.h
src/render/src/: render_asset.cpp  sprite.cpp  texture.cpp
src/render/test/: test_sprite.cpp  test_texture.cpp
src/utils/: CMakeLists.txt
src/utils/include/: type.h  utils.h
src/utils/test/: test_basic_type.cpp
